# python1-2023

./: .gitignore  README.md  pyproject.toml
adir/: a.py  f.py
src/: run.py
src/_t-zero/: z1.py  z2.py  z3.py  z4.py  z5.py  z6.py  z7.py  z8.py  z9.py
src/algo/: task1.py
src/zadania_12_Nov/: a.py  mate_zad_A.py
src/zadania_19Nov/: arithm_zad_E.py  dane.txt  fake_hash.py  zadanieA.py  zadanieB.py
src/zadania_26Nov/: slither_io_A.py  slither_io_B.py
src/zadania_3_Dec/: a.py  zadanie_A.py  zadanie_B.py
src/zadania_5_Nov/: salaries.csv  simple_read_file.py  users.py
src/zajecia_21_jan/: aa.py
src/zajecia_28_jan/: a.py
src/zajecia_7_jan/: dane.txt  operation_zip2.py  zadB.py
src/zajecia_Feb_04/: find_greater_than_in_list.py
src/zajecia_Feb_11/: np_a.py  (+2 more)
zadania_12_Nov/: a.py  mate_zad_A.py  mate_zad_B.py  mate_zad_C.py  mate_zad_D.py
zadania_19Nov/: a.py  arithm_zad_D.py  arithm_zad_E.py  fake_hash.py  sz.py  zadanieA.py
zadania_26Nov/: a.py  slither_io_A.py  slither_io_B.py  slither_io_C.py
zadania_3_Dec/: a.py  zadanie_A.py  zadanie_B.py  zadanie_C.py
zadania_5_Nov/: mixed_case.py  return_2_values_from_functions.py  simple_read_file.py  str_split.py  users.py
zadania_Dec17/: a.py  b.py
zajecia_21_jan/: a.py  aa.py  call_api.py  zad_A.py
zajecia_28_jan/: a.py  b.py  snail.md  snail.py  tab_2d.py  xtree.py
zajecia_7_jan/: operation_comprehension.py  operation_zip.py  operation_zip2.py  structure_set.py  zadB.py  zad_find_7.py
zajecia_Feb_04/: find_greater_than_in_list.py  list_reverse.py  random_numbers.py  walking_together.py
(+112 files in other folders)
