[tool.poetry]
name = "python1-2022"
version = "0.1.0"
description = "Kurs pythona, sem1 2022"
authors = ["Piotr Marecki"]
readme = "README.md"
packages = [{include = "python1_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^16.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
